--- a/.github/workflows/latex.yml
+++ b/.github/workflows/latex.yml
@@ -45,6 +45,6 @@ jobs:
         run: |
           git config user.name  "ci-bot"
           git config user.email "ci-bot@users.noreply.github.com"
-          git add build/*.pdf version.tex
+          git add -f build/*.pdf version.tex   # force add ignored files
           git commit -m "CI: PDF for ${{ steps.meta.outputs.SHORT_SHA }}" || echo "No changes"
           git push
